<resources>
    <string name="app_name">Burnt Toast Revived</string>
    <string name="select_size">Select icon size</string>
    <string name="select_margin">Select margins size</string>
    <string name="XXXS">3XS</string>
    <string name="XXS">2XS</string>
    <string name="XS">XS</string>
    <string name="S">S</string>
    <string name="M">M</string>
    <string name="L">L</string>
    <string name="XL">XL</string>
    <string name="XXL">2XL</string>
    <string name="XXXL">3XL</string>
    <string name="none">None</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
</resources>
